feat: Added the ability to select a BaselineCollection for bulk export
Refs: #285
