# src/main/java/ch/sbb/polarion/extension/pdf_exporter/rest/model/conversion/ExportParams.java
@@ -97,6 +97,9 @@ public class ExportParams {
     @Schema(description = "Internal content")
     private String internalContent;
 
+    @Schema(description = "The unique identifier for the collection")
+    private String collectionId;
+
     public @NotNull DocumentType getDocumentType() {
         if (documentType == null) {
             documentType = DocumentType.LIVE_DOC;
